--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="icon.png">
+
   <meta charset="UTF-8">
   <title>UziChess – Where the Fire Still Lives</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
