--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
       text-transform: uppercase;
       line-height: 1.2;
     }
+    .hero-right img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
 
     .hero-em {
       color: var(--accent);
