--- a/index.html
+++ b/index.html
@@ -806,6 +806,13 @@
           <div class="section-kicker">Join the Fire</div>
           <h2 class="section-title">This Is a <span>Rebellion of Spirit</span></h2>
         </div>
+        <a href="https://discord.gg/SX2mNF9N"
+   class="btn-primary"
+   target="_blank"
+   rel="noopener">
+  Enter the Temple of the Middlegame
+</a>
+
         <p class="section-sub">
           UziChess is not “against” players. It’s against a culture that
           flattened beauty into data and called it progress. If that bothers you,
