--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
           <div class="section-kicker">Join the Fire</div>
           <h2 class="section-title">This Is a <span>Rebellion of Spirit</span></h2>
         </div>
-        <a href="https://discord.gg/SX2mNF9N"
+        <a href="https://discord.gg/tt5PxnY5vk"
    class="btn-primary"
    target="_blank"
    rel="noopener">
