--- a/index.html
+++ b/index.html
@@ -799,57 +799,61 @@
       </div>
     </section>
 
-    <!-- JOIN / CTA -->
-    <section class="section" id="join">
-      <div class="section-header">
-        <div>
-          <div class="section-kicker">Join the Fire</div>
-          <h2 class="section-title">This Is a <span>Rebellion of Spirit</span></h2>
-        </div>
-        <a href="https://discord.gg/tt5PxnY5vk"
-   class="btn-primary"
-   target="_blank"
-   rel="noopener">
-  Enter the Temple of the Middlegame
-</a>
+   <!-- JOIN / CTA -->
+<section class="section" id="join">
+  <div class="section-header">
+    <div>
+      <div class="section-kicker">Join the Fire</div>
+      <h2 class="section-title">This Is a <span>Rebellion of Spirit</span></h2>
+    </div>
 
-        <p class="section-sub">
-          UziChess is not “against” players. It’s against a culture that
-          flattened beauty into data and called it progress. If that bothers you,
-          you might already be one of us.
-        </p>
-      </div>
+    <p class="section-sub">
+      UziChess is not “against” players. It’s against a culture that
+      flattened beauty into data and called it progress. If that bothers you,
+      you might already be one of us.
+    </p>
+  </div>
 
-      <div class="manifest-body">
-        <p>
-          Right now UziChess is a <strong>philosophy first, platform second</strong>.
-          A flag planted in the ground before the infrastructure is finished.
-        </p>
-        <p>
-          What comes next:
-        </p>
-        <ul style="margin:0.6rem 0 0.4rem 1.1rem; padding:0;">
-          <li>Experimental training tools that reward chaos, not safety.</li>
-          <li>Curated games that engines hate but humans remember.</li>
-          <li>Content and commentary from a blatantly biased, anti-sterile angle.</li>
-          <li>Eventually: a full ecosystem built around <em>fire-first chess</em>.</li>
-        </ul>
-        <p style="margin-top:0.9rem;">
-          If modern top-level chess makes you feel nothing, or worse —
-          <strong>makes you feel sick</strong> — keep an eye on this space.
-        </p>
-        <p style="margin-top:0.8rem;">
-          Until the tools land, you can start living the manifesto over the board:
-        </p>
-        <div class="pill-list" style="margin-top:0.6rem;">
-          <div class="pill pill--hot">Refuse sterile equality</div>
-          <div class="pill pill--hot">Protect the middlegame</div>
-          <div class="pill">Play for feeling</div>
-          <div class="pill">Value beauty over neatness</div>
-          <div class="pill">Trust your intuition</div>
-        </div>
-      </div>
-    </section>
+  <!-- MOVE THE BUTTON HERE -->
+  <a href="https://discord.gg/tt5PxnY5vk"
+     class="btn-primary"
+     target="_blank"
+     rel="noopener"
+     style="margin-bottom: 1.2rem;">
+    Enter the Temple of the Middlegame
+  </a>
+
+  <div class="manifest-body">
+    <p>
+      Right now UziChess is a <strong>philosophy first, platform second</strong>.
+      A flag planted in the ground before the infrastructure is finished.
+    </p>
+    <p>
+      What comes next:
+    </p>
+    <ul style="margin:0.6rem 0 0.4rem 1.1rem; padding:0;">
+      <li>Experimental training tools that reward chaos, not safety.</li>
+      <li>Curated games that engines hate but humans remember.</li>
+      <li>Content and commentary from a blatantly biased, anti-sterile angle.</li>
+      <li>Eventually: a full ecosystem built around <em>fire-first chess</em>.</li>
+    </ul>
+    <p style="margin-top:0.9rem;">
+      If modern top-level chess makes you feel nothing, or worse —
+      <strong>makes you feel sick</strong> — keep an eye on this space.
+    </p>
+    <p style="margin-top:0.8rem;">
+      Until the tools land, you can start living the manifesto over the board:
+    </p>
+    <div class="pill-list" style="margin-top:0.6rem;">
+      <div class="pill pill--hot">Refuse sterile equality</div>
+      <div class="pill pill--hot">Protect the middlegame</div>
+      <div class="pill">Play for feeling</div>
+      <div class="pill">Value beauty over neatness</div>
+      <div class="pill">Trust your intuition</div>
+    </div>
+  </div>
+</section>
+
 <section class="uzi-icon">
   <h2 class="uzi-icon-title">First Uzi Icon</h2>
   <p class="uzi-icon-sub">Paul Morphy’s Opera Game (1858)</p>
