--- a/index.html
+++ b/index.html
@@ -134,6 +134,14 @@
     .nav-links a:hover::after {
       width: 100%;
     }
+    /*DiSCORD BUTTON */
+    .btn-discord {
+  background: #5865F2;
+}
+
+.btn-discord:hover {
+  background: #6b76ff;
+}
 
     /* HERO */
 
@@ -815,41 +823,21 @@
   </div>
 <!-- DISCORD BUTTON -->
 <a href="https://discord.gg/tt5PxnY5vk"
+   class="btn-primary btn-discord"
    target="_blank"
    rel="noopener"
-   style="
-     display:inline-flex;
-     align-items:center;
-     gap:0.55rem;
-     background:#5865F2;
-     color:#ffffff;
-     padding:0.75rem 1.4rem;
-     border-radius:12px;
-     font-size:1rem;
-     font-weight:600;
-     text-decoration:none;
-     box-shadow:0 4px 10px rgba(0,0,0,0.25);
-     transition:all 0.18s ease-in-out;
-   "
-   onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 16px rgba(88,101,242,0.55)'"
-   onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 10px rgba(0,0,0,0.25)'"
->
-
-  <!-- Discord Icon -->
-  <svg width="22" height="22" viewBox="0 0 24 24" fill="#ffffff" aria-hidden="true">
-    <path d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 
-    00-.0785.0371c-.211.3753-.4447.8648-.6083 
-    1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-
-    1.2495a.077.077 0 00-.0785-.0371 19.7363 19.7363 0 
-    00-4.8852 1.5152.0699.0699 0 00-.0321.0277C.5334 
-    9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 
-    00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 
-    00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 
+   style="display:inline-flex;align-items:center;gap:0.55rem;">
+  <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true">
+    <path fill="#ffffff" d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 
+    00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 
+    0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 
+    00-.0785-.0371 19.7363 19.7363 0 00-4.8852 1.5152.0699.0699 0 
+    00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 
+    00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 
     00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 
     01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 
-    01.0776-.0105c3.9278 1.7933 8.18 1.7933 
-    12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 
-    01-.0066.1277 12.2986 12.2986 0 01-1.8732.8914.0766.0766 0 
+    01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1277 
+    12.2986 12.2986 0 01-1.8732.8914.0766.0766 0 
     00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 
     00.0842.0286c1.963-.6067 3.9515-1.5219 
     6.0043-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-
@@ -862,8 +850,9 @@
     2.1573 2.4189 0 1.3333-.9465 2.419-2.1573 2.419z"/>
   </svg>
 
-  Join the UZiCHESS Discord
+  <span>Join the UZiCHESS Discord</span>
 </a>
+
 
 
   <div class="manifest-body">
