--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     .nav-links a:hover::after {
       width: 100%;
     }
-    /*DiSCORD BUTTON */
+    /*DiSCORD BUTTON 
     .btn-discord {
   background: #5865F2;
 }
@@ -142,7 +142,7 @@
 .btn-discord:hover {
   background: #6b76ff;
 }
-
+*/
     /* HERO */
 
     .hero {
@@ -595,6 +595,14 @@
       }
     }
 
+  .btn-discord {
+    background: #5865F2 !important;
+  }
+
+  .btn-discord:hover {
+    background: #6b76ff !important;
+  }
+
   </style>
 </head>
 <body>
@@ -827,6 +835,7 @@
    target="_blank"
    rel="noopener"
    style="display:inline-flex;align-items:center;gap:0.55rem;">
+  
   <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true">
     <path fill="#ffffff" d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 
     00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 
