--- a/index.html
+++ b/index.html
@@ -755,6 +755,63 @@
         </aside>
       </div>
     </section>
+<!-- FAKE GM REVIEWS -->
+<section class="section" id="gm-reviews">
+  <div class="section-header">
+    <div>
+      <div class="section-kicker">Totally Real Feedback</div>
+      <h2 class="section-title">
+        What the <span>Grandmasters</span> Are Saying
+      </h2>
+    </div>
+    <p class="section-sub">
+      None of this is true. All of it is emotionally accurate.
+    </p>
+  </div>
+  <div class="manifest-body">
+    <div class="pill-list" style="margin-top:0;">
+      <div class="pill pill--hot">Not endorsed by FIDE</div>
+      <div class="pill">100% human bias</div>
+      <div class="pill">0% engine approval</div>
+    </div>
+
+    <div class="gm-grid" style="margin-top:1.2rem;display:grid;gap:1rem;">
+      <div class="gm-card" style="border:1px solid rgba(255,255,255,0.08);border-radius:12px;padding:1rem 1.1rem;background:rgba(255,255,255,0.02);">
+        <div style="font-size:0.9rem;opacity:0.8;">Hikaru Nakamura*</div>
+        <p style="margin-top:0.4rem;font-size:0.98rem;line-height:1.5;">
+          “Finally, a site that respects people who play objectively bad
+          moves for content.”
+        </p>
+      </div>
+
+      <div class="gm-card" style="border:1px solid rgba(255,255,255,0.08);border-radius:12px;padding:1rem 1.1rem;background:rgba(255,255,255,0.02);">
+        <div style="font-size:0.9rem;opacity:0.8;">Magnus Carlsen*</div>
+        <p style="margin-top:0.4rem;font-size:0.98rem;line-height:1.5;">
+          “This is irresponsible. I’m launching a competitor focused on winning
+          dead equal endgames in Armageddon.”
+        </p>
+      </div>
+
+      <div class="gm-card" style="border:1px solid rgba(255,255,255,0.08);border-radius:12px;padding:1rem 1.1rem;background:rgba(255,255,255,0.02);">
+        <div style="font-size:0.9rem;opacity:0.8;">Gukesh D*</div>
+        <p style="margin-top:0.4rem;font-size:0.98rem;line-height:1.5;">
+          “My coach hates this website. That’s how I know it’s good.”
+        </p>
+      </div>
+
+      <div class="gm-card" style="border:1px solid rgba(255,255,255,0.08);border-radius:12px;padding:1rem 1.1rem;background:rgba(255,255,255,0.02);">
+        <div style="font-size:0.9rem;opacity:0.8;">Anonymous 2800*</div>
+        <p style="margin-top:0.4rem;font-size:0.98rem;line-height:1.5;">
+          “I checked one of these games with an engine. It cried.”
+        </p>
+      </div>
+    </div>
+
+    <p style="margin-top:0.9rem;font-size:0.85rem;opacity:0.7;">
+      *All quotes are fake. The sentiment is not.
+    </p>
+  </div>
+</section>
 
     <!-- PILLARS -->
     <section class="section" id="pillars">
