--- a/index.html
+++ b/index.html
@@ -664,6 +664,7 @@
   }
 
   </style>
+  <script defer src="https://umami-chi-lilac.vercel.app/script.js" data-website-id="6d07b1cf-1f13-440f-85ef-9fc06853d5eb"></script>
 </head>
 <body>
   <main>
