--- a/index.html
+++ b/index.html
@@ -718,12 +718,12 @@
       <strong>truth, aesthetics, and spiritual violence on the board</strong>.
     </div>
   </div>
+<div class="hero-right">
+  <figure class="hero-card hero-portrait" aria-label="UziChess fire illustration">
+    <img src="camp-fire.jpg" alt="Campfire burning with glowing flames">
+  </figure>
+</div>
 
-  <div class="hero-right">
-    <figure class="hero-card hero-portrait" aria-label="UziChess spirit illustration">
-      <img src="uzichess-hero.jpg" alt="Stylized duo walking through an alley, laughing together">
-    </figure>
-  </div>
 </section>
 
 
