--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
   </div>
 <div class="hero-right">
   <figure class="hero-card hero-portrait" aria-label="UziChess fire illustration">
-    <img src="camp-fire.jpg" alt="Campfire burning with glowing flames">
+    <img src="campfire.jpg" alt="Campfire burning with glowing flames">
   </figure>
 </div>
 
