--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
   </div>
 <div class="hero-right">
 
-    <img src="campfire.jpg" alt="Campfire burning with glowing flames">
+    <img src="campfire.jpg" alt="Campfire burning with glowing flames" class="hero-image-raw">
 
 </div>
 
