--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <link rel="icon" type="image/png" href="icon.png">
 
   <meta charset="UTF-8">
-  <title>UziChess – Where the Fire Still Lives</title>
+  <title>UZiCHESS – Where the Fire Still Lives</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="UziChess is a rebellion against sterile chess, engine obedience, and the death of the middlegame. Where the fire still lives.">
+  <meta name="description" content="UZiCHESS is a rebellion against sterile chess, engine obedience, and the death of the middlegame. Where the fire still lives.">
   <style>
     :root {
       --bg: #050509;
@@ -680,7 +680,7 @@
       <div class="logo-mark">
         <div class="logo-square"></div>
         <div>
-          <div class="logo-text-main">UZICHESS</div>
+          <div class="logo-text-main">UZiCHESS</div>
           <div class="logo-text-sub">FIRE &amp; MIDDLEGAME</div>
         </div>
       </div>
@@ -705,7 +705,7 @@
     </h1>
 
     <p class="hero-sub">
-      <strong>UziChess</strong> is a declaration of war on sanitized,
+      <strong>UZiCHESS</strong> is a declaration of war on sanitized,
       engine-obedient chess. We exist for players who still want
       <strong>chaos, intuition, risk</strong> — and who refuse to accept
       a world where every middlegame is traded away “for equality”.
@@ -717,7 +717,7 @@
         <span class="btn-caret">&rarr;</span>
       </a>
       <a href="#pillars" class="btn-ghost">
-        Why UziChess?
+        Why UZiCHESS?
       </a>
     </div>
 
@@ -739,12 +739,12 @@
     <section class="section" id="manifest">
       <div class="section-header">
         <div>
-          <div class="section-kicker">The UziChess Manifesto</div>
+          <div class="section-kicker">The UZiCHESS Manifesto</div>
           <h2 class="section-title">A War on <span>Sterile Chess</span></h2>
         </div>
         <p class="section-sub">
           This is not a feature list. It’s a line drawn in the sand.
-          UziChess exists to reclaim the
+          UZiCHESS exists to reclaim the
           <strong>middlegame as sacred territory</strong> — the place where
           humans and chaos still have something to say.
         </p>
@@ -781,7 +781,7 @@
           </p>
 
           <div class="manifest-highlight">
-            UziChess is a sanctuary for players who feel physical disgust
+            UZiCHESS is a sanctuary for players who feel physical disgust
             when they see lifeless, pre-chewed “perfect” chess — and who still
             believe the game is closer to <strong>music and poetry</strong>
             than to accounting.
@@ -790,7 +790,7 @@
 
         <aside>
           <div class="manifest-highlight">
-            <strong>UziChess: Where the fire still lives.</strong><br><br>
+            <strong>UZiCHESS: Where the fire still lives.</strong><br><br>
             If you feel the sickness when you see sterile chess,
             if you long for chaos, intuition, and risk,
             if you want the game to matter again —
@@ -918,7 +918,7 @@
     <section class="section" id="pillars">
       <div class="section-header">
         <div>
-          <div class="section-kicker">How UziChess Plays</div>
+          <div class="section-kicker">How UZiCHESS Plays</div>
           <h2 class="section-title">Core <span>Pillars</span></h2>
         </div>
         <p class="section-sub">
@@ -964,7 +964,7 @@
             Hate, disgust, awe — all allowed.
           </p>
           <p>
-            UziChess legitimizes emotional reactions to positions, players,
+            UZiCHESS legitimizes emotional reactions to positions, players,
             openings and “modern theory”. Aesthetic revulsion is data.
             Beauty is an argument. We don’t apologize for caring.
           </p>
@@ -982,7 +982,7 @@
     </div>
 
     <p class="section-sub">
-      UziChess is not “against” players. It’s against a culture that
+      UZiCHESS is not “against” players. It’s against a culture that
       flattened beauty into data and called it progress. If that bothers you,
       you might already be one of us.
     </p>
@@ -1024,7 +1024,7 @@
 
   <div class="manifest-body">
     <p>
-      Right now UziChess is a <strong>philosophy first, platform second</strong>.
+      Right now UZiCHESS is a <strong>philosophy first, platform second</strong>.
       A flag planted in the ground before the infrastructure is finished.
     </p>
     <p>
@@ -1058,7 +1058,7 @@
   <p class="uzi-icon-sub">Paul Morphy’s Opera Game (1858)</p>
 
   <p class="uzi-icon-desc">
-    The first sacred artifact of UziChess.<br>
+    The first sacred artifact of UZiCHESS.<br>
     A pure expression of intuition, violence, and aesthetic truth.<br>
     A full game viewer is coming soon.
   </p>
@@ -1134,7 +1134,7 @@
     <footer class="footer">
       <div class="footer-top">
         <div class="footer-cta">
-          <strong>UziChess</strong> is a long war, not a quick fix.<br>
+          <strong>UZiCHESS</strong> is a long war, not a quick fix.<br>
           Today: manifesto. Tomorrow: tools, training, and a culture that remembers how to burn again.
         </div>
         <div>
@@ -1144,7 +1144,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <span>&copy; <span id="year"></span> UziChess. Where the fire still lives.</span>
+        <span>&copy; <span id="year"></span> UZiCHESS. Where the fire still lives.</span>
         <span>Built in open defiance of 0.00.</span>
       </div>
     </footer>
