--- a/index.html
+++ b/index.html
@@ -55,17 +55,26 @@
 
     /* HEADER / NAV */
 
-    .nav {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 1.2rem 0 0.4rem;
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      backdrop-filter: blur(18px);
-      background: linear-gradient(to bottom, rgba(5,5,9,0.96), rgba(5,5,9,0.82), transparent);
-    }
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.2rem 0 0.4rem;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  backdrop-filter: blur(18px);
+
+  /* ny grön "rebel"-bakgrund */
+  background: linear-gradient(
+    to right,
+    rgba(0, 255, 102, 0.22),
+    rgba(5, 5, 9, 0.96)
+  );
+  border-bottom: 1px solid rgba(0, 255, 102, 0.35);
+  box-shadow: 0 0 22px rgba(0, 255, 102, 0.35);
+}
+
 
     .logo-mark {
       display: inline-flex;
@@ -74,24 +83,23 @@
     }
 
     .logo-square {
-      width: 26px;
-      height: 26px;
-      border-radius: 6px;
-      background: radial-gradient(circle at 30% 20%, #ffb3b3 0, #ff3b3b 34%, #3b0000 100%);
-      box-shadow:
-        0 0 12px rgba(255, 59, 59, 0.8),
-        0 0 40px rgba(255, 59, 59, 0.35);
-      position: relative;
-    }
+  width: 34px;
+  height: 34px;
+  background-image: url("uzi2.jpg"); /* eller uzi2.png om du bytt format */
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 0.55rem;
 
-    .logo-square::after {
-      content: "";
-      position: absolute;
-      inset: 6px 5px;
-      border-radius: 4px;
-      border: 2px solid rgba(5, 5, 9, 0.9);
-      box-shadow: inset 0 0 12px rgba(0,0,0,0.9);
-    }
+  /* lite grön glöd runt vapnet */
+  filter: drop-shadow(0 0 10px rgba(0, 255, 102, 0.55));
+}
+
+/* ta bort den inre kvadraten */
+.logo-square::after {
+  content: none;
+}
+
 
     .logo-text-main {
       font-size: 1.1rem;
