--- a/index.html
+++ b/index.html
@@ -455,13 +455,15 @@
     /* Sections */
 
     .section {
-      margin-top: 3rem;
-      padding: 2.2rem 1.6rem;
-      background: linear-gradient(135deg, rgba(16,16,32,0.94), rgba(6,6,14,0.98));
-      border-radius: var(--radius-xl);
-      border: 1px solid rgba(255,255,255,0.04);
-      box-shadow: 0 18px 60px rgba(0, 0, 0, 0.7);
-    }
+  margin-top: 3rem;
+  padding: 2.2rem 1.6rem;
+  background: linear-gradient(135deg, rgba(16,16,32,0.94), rgba(6,6,14,0.98));
+  border-radius: var(--radius-xl);
+  border: 1px solid rgba(255,255,255,0.04);
+  box-shadow: 0 18px 60px rgba(0, 0, 0, 0.7);
+  scroll-margin-top: 120px; /* <– magin */
+}
+
 
     .section-header {
       display: flex;
