--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 
     .section-title {
       font-size: 1.35rem;
-      text-transform: uppercase;
+      text-transform: none;
       letter-spacing: 0.12em;
     }
 
