--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
     .section-kicker {
       font-size: 0.75rem;
       letter-spacing: 0.2em;
-      text-transform: uppercase;
+      text-transform: none;
       color: var(--muted);
     }
 
