--- a/index.html
+++ b/index.html
@@ -1149,6 +1149,17 @@
       <div class="footer-bottom">
         <span>&copy; <span id="year"></span> UZiCHESS. Where the fire still lives.</span>
         <span>Built in open defiance of 0.00.</span>
+<!-- LÄNK TiLL KUNGFLU -->
+        <div class="footer-bottom">
+  <span>&copy; <span id="year"></span> UZiCHESS. Where the fire still lives.</span>
+  <span>Built in open defiance of 0.00.</span>
+  <span>
+    <a href="/kungflu-flow" style="color: var(--accent);">
+      KUNG FLU — CH39 Flow Engine →
+    </a>
+  </span>
+</div>
+
       </div>
     </footer>
   </main>
