Update chess paragraph with additional text
Added '(test)' to the end of a paragraph about chess.

--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
         <article class="manifest-body">
           <p><strong>Chess did not die quietly.</strong><br>
             It died on camera — smiling, optimized, flattened
-            into something that no longer resembles the fire that once defined it.
+            into something that no longer resembles the fire that once defined it. (test)
           </p>
 
           <p><strong>We reject the Engine Regime as the final word.</strong><br>
