--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
       padding: 0.35rem 0.85rem;
       border-radius: 999px;
       border: 1px solid rgba(255, 59, 59, 0.55);
-      background: radial-gradient(circle at 20% 0, rgba(255, 59, 59, 0.3), rgba(5,5,9,0.95));
+      background: rgba(5,5,9,0.92);
+}
+
       box-shadow: 0 0 18px rgba(255, 59, 59, 0.35);
     }
 
@@ -457,7 +459,7 @@
     .section {
   margin-top: 3rem;
   padding: 2.2rem 1.6rem;
-  background: linear-gradient(135deg, rgba(16,16,32,0.94), rgba(6,6,14,0.98));
+  background: rgba(8,8,14,0.96);
   border-radius: var(--radius-xl);
   border: 1px solid rgba(255,255,255,0.04);
   box-shadow: 0 18px 60px rgba(0, 0, 0, 0.7);
@@ -531,7 +533,7 @@
       margin-top: 1.2rem;
       padding: 0.9rem 1rem;
       border-radius: var(--radius-lg);
-      background: radial-gradient(circle at 0 0, rgba(255, 59, 59, 0.25), rgba(10, 10, 16, 0.98));
+      background: rgba(10, 10, 16, 0.98);
       border: 1px solid rgba(255, 59, 59, 0.7);
       font-size: 0.9rem;
       color: var(--text);
@@ -614,12 +616,9 @@
     }
 
     .pillar-card::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: radial-gradient(circle at 0 0, rgba(255,59,59,0.09), transparent 60%);
-      pointer-events: none;
+    display: none;
     }
+
 
     /* Footer / call */
 
