--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
   top: 0.75rem;
   z-index: 10;
   background:
-    radial-gradient(circle at 0% 0%, rgba(88, 101, 242, 0.40), transparent 55%),
-    linear-gradient(to bottom, rgba(5, 5, 9, 0.98), rgba(5, 5, 9, 0.94));
+  rgba(114, 137, 218, 1)
   border-radius: 16px;
   box-shadow:
     0 0 0 1px rgba(88, 101, 242, 0.55),
