Fix background property formatting in CSS

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
   position: sticky;
   top: 0.75rem;
   z-index: 10;
-  background:
-  rgba(114, 137, 218, 1)
+  background: rgba(114, 137, 218, 1);
   border-radius: 16px;
   box-shadow:
     0 0 0 1px rgba(88, 101, 242, 0.55),
