--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       margin-top: 0.75rem;
       padding: 0.8rem 1.4rem;
 
-      background: rgba(5,5,9,0.96); /* SOLID */
+      background: rgba(88, 101, 242, 0.18); /* SOLID */
       border-radius: 16px;
 
       /* Subtle outline + depth */
